# mightygraph-rs

./: .dockerignore  .env  .gitignore  .gitignore.bak  .rustfmt  Cargo.toml  README.md  docker-compose.yml  kg_rs.py
.github/workflows/: ci.yaml
analysed/data/: multistage.py
mightygraph-rs/: .gitignore  Cargo.toml
mightygraph-rs/src/: Dockerfile  lib.rs  main.rs  mod.rs  petgraph_full_0x0.rs  prelude.rs  subgraph_optimized.rs  utils.rs
mightygraph-rs/src/petgraph_full_0x0/: prelude.rs
petgraph_full/src/: main.rs
src/: .codiumai.jl
tests/: test_csv_data_processing.rs  test_main.rs
torch/: data_preprocessing.ipynb  shared_rep_GNN.py
