[package]
name = "petgraph_full"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
chrono = "0.4"
polars = "0.25"

[lib]
name="VerisAttack"
path="src/lib.rs"

[[bin]]
name="VerisAttack"
path="src/main.rs"
