[package]
name = "mighty_graph_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
chrono = "0.4"
polars = "0.25"
parquet = "53.0.0"

[lib]
name="mighty_graph_rs"
path="src/lib.rs"

[[bin]]
name="mighty_graph_rs"
path="src/main.rs"
